--- a/index.html
+++ b/index.html
@@ -13,4 +13,14 @@
 <body>
   <app-root>Loading...</app-root>
 <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.9ce5a15590a877a817e7.bundle.js"></script><script type="text/javascript" src="main.65c6c02abbbeff3a59ea.bundle.js"></script></body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87663695-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
