--- a/404.html
+++ b/404.html
@@ -2,17 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>PTC - Project Time Calculator</title>
-  <base href="/project-time-calculator/">
+  <title>PTT - Project Time Tracker</title>
+  <base href="/project-time-tracker/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-</head>
+  <link href="assets/hamburgers.css" rel="stylesheet" />
+<link href="styles.8d90a2cc86270b944b1acfdba0a79237.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.9ce5a15590a877a817e7.bundle.js"></script><script type="text/javascript" src="main.65c6c02abbbeff3a59ea.bundle.js"></script></body>
+<script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.b2328beb0372c051d06d.bundle.js"></script><script type="text/javascript" src="main.6d3aa39f418be1735b08.bundle.js"></script></body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
